# cedar

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLA.md  CONTRIBUTING.md  LICENSE  LICENSE-ADDITIONAL-TERMS.md  README.md  cedar.ipynb  pyproject.toml
.github/workflows/: tests.yml
docs/source/: citation.md  conf.py  contributing.md  examples.md  getting-started.md  index.rst  installation.md
docs/source/_static/: custom.css  fonts.css
docs/source/api/: index.rst
docs/source/user-guide/: cedar-walkthrough.md  cop-quickstart.md
examples/: cdd_example.py  cop_example.py  effective_cdd_example.py  effective_cop_example.py  shr_example.py
src/cedar/: __init__.py
src/cedar/metrics/: cdd.py  cop.py  effective_cdd.py  effective_cop.py  shr.py
src/cedar/physics/: cop.py  shr.py
src/cedar/tests/: test_cop.py  test_effective.py  test_shr.py
src/cedar/utils/: interpolation.py  plotting.py  validation.py
