[project]
name = "cedar"
version = "1.0.0"
description = "CEDAR: Climate & Energy Diagnostics for Applied Refrigeration — link climate data to refrigeration physics and thermal system performance."
readme = "README.md"
authors = [
  { name = "Jake W. Casselman", email = "jake.w.casselman@gmail.com" }
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["climate", "energy", "refrigeration", "COP", "thermal performance", "CoolProp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Energy",
]

# 🧩 Modern, wheel-available, and cross-platform
dependencies = [
  "CoolProp>=6.4.3",
  "numpy>=1.26,<2.3",
  "scipy>=1.12,<1.14",
  "matplotlib>=3.7,<3.10",
  "sphinx>=8.0,<9.0",
]

[project.urls]
Homepage = "https://github.com/jake-casselman/cedar"
Documentation = "https://cedar.readthedocs.io/"
Repository = "https://github.com/jake-casselman/cedar"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["cedar"]
omit = ["*/tests/*"]

[tool.pytest.ini_options]
addopts = "--cov=cedar --cov-report=term-missing --cov-fail-under=85 -v -s"
testpaths = ["src/cedar/tests"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "build",
  "twine",
]
